# mu-update-daemon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ipc/: org.mu.Update.xml
src/: main.c  mu_apply_update.c  mu_apply_update.h  mu_manifest.c  mu_manifest.h  mu_verify.c  mu_verify.h
